--- a/SchoolRegister/src/main/resources/templates/admin/dashboard.html
+++ b/SchoolRegister/src/main/resources/templates/admin/dashboard.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="es" xmlns:th="https://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title th:text="#{admin_title}"></title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
         <style>
             .bg-gray{
@@ -14,69 +14,91 @@
 
         <header th:insert="~{layouts/layouts :: header}"></header>
 
+        <!-------------------------------------- Nav Bar -------------------------------------------------------------------->
+
         <ul class="nav nav-pills d-flex justify-content-around bg-light w-100 p-3" style="margin-top:75px; max-height:100vh">
             <li class="nav-item">
-                <a class="nav-link active fs-3" data-bs-toggle="pill" aria-current="page" href="#home">Home</a>
+                <a class="nav-link active fs-3" data-bs-toggle="pill" id="toHome" aria-current="page" href="#home" th:text="#{admin_nav_home}"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link fs-3" data-bs-toggle="pill" href="#students">Students</a>
+                <a class="nav-link fs-3" data-bs-toggle="pill" id="toStudents" href="#students" th:text="#{admin_nav_students}"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link fs-3" data-bs-toggle="pill" href="#teachers">Teachers</a>
+                <a class="nav-link fs-3" data-bs-toggle="pill" id="toTeachers" href="#teachers" th:text="#{admin_nav_teachers}"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link fs-3" data-bs-toggle="pill" href="#courses">Courses</a>
+                <a class="nav-link fs-3" data-bs-toggle="pill" id="toUsers" href="#users" th:text="#{admin_nav_users}"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link fs-3" data-bs-toggle="pill" href="#careers">Careers</a>
+                <a class="nav-link fs-3" data-bs-toggle="pill" id="toCareers" href="#careers" th:text="#{admin_nav_careers}"></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link fs-3" data-bs-toggle="pill" id="toAdmins" href="#admins" th:text="#{admin_nav_admins}"></a>
+            </li>
+            <li class="nav-item">
+                <div class="dropdown">
+                    <button class="nav-link fs-3 dropdown-toggle" type="button" th:text="#{admin_nav_me}"
+                            data-bs-toggle="dropdown" aria-expanded="false"></button>
+                    <ul class="dropdown-menu">
+                        <li><h5 class="dropdown-header" th:text="#{admin_nav_me_change}"></h5></li>
+                        <li>
+                            <form action="#" method="get">
+                                <label>
+                                    <select class="dropdown-item" name="lang" onchange="this.form.submit()">
+                                        <option selected th:text="#{admin_nav_me_change_select}"></option>
+                                        <option value="en" th:text="#{languages_change_index_english}"></option>
+                                        <option value="es" th:text="#{languages_change_index_spanish}"></option>
+                                    </select>
+                                </label>
+                            </form>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <form th:action="@{/logout}" method="post" id="logoutForm">
+                                <button onclick="document.getElementById('logoutForm').submit();" class="dropdown-item"
+                                        type="submit" th:text="#{admin_nav_me_logout}"></button>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
             </li>
         </ul>
 
-        <div class="tab-content d-flex align-items-center pt-1" style="min-height:65vh;">
+        <!----------------------------------------------- Content Nav Bar and Nav Bar Vertical ------------------------------------------------------------------->
+
+        <div class="tab-content d-flex align-items-center pt-1" style="min-height:65vh">
             <div class="tab-pane container-fluid active" id="home">
-                    <div class="row">
-                        <div class="col-4">
-                            <ul class="nav flex-column nav-tabs card rounded shadow">
-                                <li class="nav-item p-1">
-                                    <a class="nav-link fs-4 text-dark active fs-3 ms-2" data-bs-toggle="tab" href="#index">Index</a>
-                                </li>
-                                <li class="nav-item p-1">
-                                    <a class="nav-link fs-4 text-dark ms-2" data-bs-toggle="tab" href="#add_students">Add Student</a>
-                                </li>
-                                <li class="nav-item p-1">
-                                    <a class="nav-link fs-4 text-dark ms-2" data-bs-toggle="tab" href="#add_teachers">Add Teacher</a>
-                                </li>
-                                <li class="nav-item p-1">
-                                    <a class="nav-link fs-4 text-dark ms-2" data-bs-toggle="tab" href="#add_courses">Add Course</a>
-                                </li>
-                                <li class="nav-item p-1">
-                                    <a class="nav-link fs-4 text-dark ms-2" data-bs-toggle="tab" href="#add_admins">Add Admin</a>
-                                </li>
-                                <li class="nav-item p-1">
-                                    <a class="nav-link fs-4 text-dark ms-2" data-bs-toggle="tab" href="#add_careers">Add Careers</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-8">
-                            <div class="tab-pane container fade" id="index">index</div>
-                            <div class="tab-pane container fade" id="add_students">home 2</div>
-                            <div class="tab-pane container fade" id="add_teachers">menu1</div>
-                            <div class="tab-pane container fade" id="add_courses">menu2</div>
-                            <div class="tab-pane container fade" id="add_admins">menu2</div>
-                            <div class="tab-pane container fade" id="add_careers">menu2</div>
-                        </div>
-                    </div>
+                <div th:replace="~{layouts/contents/navBarHomeAdmin :: content_admin_home}"></div>
             </div>
+
             <div class="tab-pane container fade" id="students"></div>
             <div class="tab-pane container fade" id="teachers"></div>
-            <div class="tab-pane container fade" id="courses"></div>
+            <div class="tab-pane container fade" id="users"></div>
             <div class="tab-pane container fade" id="careers"></div>
+            <div class="tab-pane container fade" id="admins"></div>
         </div>
 
-
-
         <footer th:replace="~{layouts/layouts :: footer}"></footer>
+        <div th:text="${goto}" id="hidden" style="display:none"></div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+
+            document.addEventListener("DOMContentLoaded", function () {
+                const fragment = document.getElementById('hidden').innerText;
+                console.log(fragment);
+                if (fragment.includes("-")) {
+                    const sections = fragment.split("-");
+                    sections.forEach(section => {
+                        const element = document.getElementById(section);
+                        if (element) {
+                            element.click();
+                        }
+                     });
+                }
+            });
+        </script>
 
     </body>
 </html>
