--- a/SchoolRegister/src/main/resources/templates/index.html
+++ b/SchoolRegister/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html lang="es" xmlns:th="https://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title th:text="#{title_index}" ></title>
