--- a/SchoolRegister/src/main/resources/templates/layouts/contents/studentSection.html
+++ b/SchoolRegister/src/main/resources/templates/layouts/contents/studentSection.html
@@ -11,7 +11,7 @@
         <div class="col-4 d-flex justify-content-center align-items-center">
           <form th:action="@{/admin/filterEntity} + '?entity=students'" method="post" class="rounded shadow row g-3 p-1 bg-light" style="min-height:50vh">
             <h1 class="fs-5 text-dark text-center" th:text="#{form_filter}"></h1>
-            <small class="text-center text-danger fs-6" th:text="#{error_filter}" th:if="${error_filtering_entity != null}"></small>
+            <small class="text-center text-danger fs-6 flashMessages" th:text="#{error_filter}" th:if="${error_filtering_entity_students != null}"></small>
             <hr>
             <div class="col-md-6">
               <label for="name" class="form-label" th:text="#{form_name}"></label>
@@ -60,11 +60,11 @@
           <div class="overflow-auto w-100" style="max-height:60vh">
             <table class="table table-hover bg-light rounded shadow">
               <div class="d-flex justify-content-center align-items-center p-2 flashMessages"
-                   th:if="${deleted_success != null || error_deleted_entity != null || updated_success != null || error_updating_entity != null}">
-                <small class="text-success fs-5" th:text="#{success_deleted}" th:if="${deleted_success != null}"></small>
-                <small class="text-success fs-5" th:text="#{success_updated}" th:if="${updated_success != null}"></small>
-                <small class="text-danger fs-5" th:text="#{error_deleted}" th:if="${error_deleted_entity != null}"></small>
-                <small class="text-danger fs-5" th:text="#{error_updated}" th:if="${error_updating_entity != null}"></small>
+                   th:if="${deleted_success_students != null || error_deleted_entity_students != null || updated_success != null || error_updating_entity != null}">
+                <small class="text-success fs-5" th:text="#{success_deleted}" th:if="${deleted_success_students != null}"></small>
+                <small class="text-success fs-5" th:text="#{success_updated}" th:if="${updated_success_students != null}"></small>
+                <small class="text-danger fs-5" th:text="#{error_deleted}" th:if="${error_deleted_entity_students != null}"></small>
+                <small class="text-danger fs-5" th:text="#{error_updated}" th:if="${error_updating_entity_students != null}"></small>
               </div>
               <tbody>
               <tr th:class="${student.status == 'on'} ? bg-active : inactive" th:each="student: ${entities.get('student')}">
