--- a/SchoolRegister/src/main/resources/templates/layouts/forms/formStudent.html
+++ b/SchoolRegister/src/main/resources/templates/layouts/forms/formStudent.html
@@ -57,10 +57,10 @@
                         <small class="fs-6 text-danger" th:if="${#fields.hasErrors('status')}" th:errors="*{status}" ></small>
                     </div>
                     <div class="col-2">
-                        <button type="submit" class="btn btn-primary" th:text="#{form_add}"></button>
+                        <button type="submit" class="btn btn-primary w-100" th:text="#{form_add}"></button>
                     </div>
                     <div class="col-2">
-                        <button type="reset" class="btn btn-danger" th:text="#{form_reset}"></button>
+                        <button type="reset" class="btn btn-danger w-100" th:text="#{form_reset}"></button>
                     </div>
                 </form>
             </div>
