--- a/SchoolRegister/src/main/resources/templates/layouts/forms/formTeacherEdit.html
+++ b/SchoolRegister/src/main/resources/templates/layouts/forms/formTeacherEdit.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="col-md-6">
                         <label for="phone" class="form-label d-flex" th:text="#{form_phone}"></label>
-                        <input type="tel" class="form-control" id="phone" th:name="phoneNumber" th:value="${teacher.phoneNumber}" required>
+                        <input type="tel" class="form-control" id="phone" th:name="phoneNumber" th:value="${teacher.phoneNumber}">
                     </div>
                     <div class="col-6">
                         <label for="email" class="form-label d-flex" th:text="#{form_email}"></label>
